# left_pad_cpp

./: CMakeLists.txt  README.md  left_pad.cpp  left_pad.h  left_pad_example.cpp
